<resources>
    <string name="app_name">MoneyShankar</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="got_it">GOT IT</string>

    <string name="slide_1_title">Total Budget!</string>
    <string name="slide_1_desc">The easiest way to keep track of your budget and expenses!</string>

    <string name="slide_2_title">Easy expense listing</string>
    <string name="slide_2_desc">List down your expenses on daily, weekly, monthly and yearly basis!</string>

    <string name="slide_3_title">Great Visuals</string>
    <string name="slide_3_desc">Charts to help you make better inference!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>


    <string name="title_home">Home</string>
    <string name="title_expense_details">Your expense details</string>
    <string name="title_expense">Expense</string>
    <string name="title_analysis">Charts</string>
    <string name="title_activity_add_expense">Add Expense</string>
    <string name="title_activity_expense_detail">Expense Detail</string>
    <string name="title_delete_expense">Delete Expense</string>
    <string name="grand_total_message">Overall Expense</string>
    <string name="grand_total_amount">10000</string>
    <string name="expense_message">Total Expense</string>
    <string name="home_trend_message">Trend</string>
    <string name="budget_left_message">Budget left</string>
    <string name="expense_amount">1000</string>

    <string name="authority">com.tony.odiya.moneyshankar.provider</string>

    <string name="item_hint">Item</string>
    <string name="amount_hint">Amount</string>
    <string name="remark_hint">Remark</string>
    <string name="category_hint">Category</string>
    <string name="expense_list_trend">Trend</string>
    <string name="expense_list">Items bought</string>
    <string name="expense_detail_header">EXPENSE DETAIL</string>
    <string name="expense_time">DD MON YEAR HH:MM:SS</string>
    <string name="expense_time_format">d MMM yyyy HH:mm</string>
    <string name="expense_editable_switch">Edit</string>

    <string name="action_save">Save</string>
    <string name="action_back">Back</string>
    <string name="action_add">Add</string>
    <string name="action_delete">Delete</string>
    <string name="action_setup">Setup</string>
    <string name="action_edit_budget">Edit Budget</string>
    <string name="action_edit_expense">Edit Expense</string>
    <string name="action_reset">Reset</string>
    <string name="action_search">Search</string>
    <string name="action_intro">Introduction</string>
    <string name="action_settings">Settings</string>

    <string name="search_hint">Item or Category</string>

    <string name="title_budget_amount">Budget Amount</string>
    <string name="title_budget_reset">Budget Reset</string>
    <string name="budget_save">Save</string>
    <string name="budget_later">Later</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="dialog_budget_setup_msg">Keeping a monthly budget helps in the long run. Enter your monthly budget below.</string>
    <string name="dialog_budget_edit_msg">Increasing your monthly budget is not a healthy saving habit !!</string>
    <string name="dialog_budget_reset_msg">This action will reset all your expenses and budget for this month. Are you sure?</string>
    <string name="dialog_budget_confirm_reset">Your budget for this month has been reset.</string>
    <string name="dialog_expense_confirm_reset">Your expenses for this month havae been reset.</string>
    <string name="dialog_budget_setup_hint">Your budget !</string>
    <string name="dialog_budget_empty_setup_msg">Budget cannot be empty!!</string>
    <string name="dialog_budget_decrease_msg">You have made expenditures already. You cannot decrease your budget now!!</string>
    <string name="dialog_expense_delete_message">Deleting your past expense cannot be reverted. Are you sure?</string>
    <string name="budget_left_monthly">Budget left for month</string>


    <string name="analysis">Analysis</string>
    <string name="analysis_trend">Trend</string>
    <string name="by_category">By Category</string>
    <string name="by_item">By Item</string>
    <string name="by_trend_daily">By Daily Trend</string>
    <string name="by_trend_weekly">By Weekly Trend</string>
    <string name="by_trend_monthly">By Monthly Trend</string>
    <string name="by_trend_yearly">By Yearly Trend</string>

    <string name="my_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>

    <string name="prefs_holder">settingXYZ</string>
    <string name="prefs_help">Help</string>
    <string name="prefs_help_summ">Help</string>
    <string name="prefs_help_FAQ">FAQ</string>
    <string name="prefs_help_terms_condtions">Terms and Conditions</string>
    <string name="prefs_help_contact_us">Contact Us</string>
    <string name="prefs_help_contact_details">If you have any questions or doubts, please contact us at </string>
    <string name="prefs_help_contact_mail">moneyshankarcom@gmail.com</string>
    <string name="prefs_help_Ok">Ok</string>

    <string name="title_activity_my_settings">Settings</string>
    <string name="title_activity_terms">Terms and Conditions</string>

    <string name="agreement_accept">ACCEPT</string>
    <string name="agreement_deny">DENY</string>

    <!-- Strings related to Settings -->


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_help">Help</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">MoneyShankar</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="admobs_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="banner_ads_unit_id">ca-app-pub-3940256099942544/6300978111</string>


</resources>
