<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <item
        android:id="@+id/action_alert"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_error_black_24dp"
        android:title="@string/action_setup"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/action_edit_budget"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_create_black_24dp"
        android:title="@string/action_edit_budget"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_reset"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_restore_black_24dp"
        android:title="@string/action_reset"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_intro"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_cake_black_24dp"
        android:title="@string/action_intro"
        app:showAsAction="ifRoom|withText"
        />

    <item
        android:id="@+id/action_prefs"
        android:checkable="false"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom|withText"
        />

</menu>