<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tony.odiya.mahanadi.activity.AddExpenseActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/add_expense_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"/>

    <EditText
        android:id="@+id/edit_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/item_hint"
        android:layout_margin="@dimen/expense_text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/edit_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/category_hint"
        android:layout_margin="@dimen/expense_text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLength="16"/>
    <EditText
        android:id="@+id/edit_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount_hint"
        android:layout_margin="@dimen/expense_text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:inputType="numberDecimal"
        android:maxLength="20"/>
    <EditText
        android:id="@+id/edit_remark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/remark_hint"
        android:layout_margin="@dimen/expense_text_margin"
        android:textAppearance="?attr/textAppearanceListItem"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLength="40"
        />

</LinearLayout>
