<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.Guideline
        android:id="@+id/guidelinev5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_percent="0.05"
        card_view:layout_constraintTop_toTopOf="parent"/>

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev34"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_percent="0.34" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_percent="0.5" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev66"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_percent="0.66" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinev95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        card_view:layout_constraintGuide_percent="0.95" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow1Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.05" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow1Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.30" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow2Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.50" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow2Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.80" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow3Top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.65" />
    <android.support.constraint.Guideline
        android:id="@+id/guidelinehRow3Bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        card_view:layout_constraintGuide_percent="0.9" />
    <TextView
        android:id="@+id/category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toTopOf="@id/guidelinehRow1Top"
        card_view:layout_constraintBottom_toTopOf="@id/guidelinehRow1Bottom"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/card_text_margin_start"
        card_view:layout_constraintLeft_toRightOf="@id/guidelinev5"
        card_view:layout_constraintRight_toLeftOf="@id/guidelinev50"
        android:text="@string/category_hint"
        android:textAppearance="?attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_hint"
        android:textAppearance="?attr/textAppearanceListItem"
        card_view:layout_constraintTop_toTopOf="@id/guidelinehRow1Top"
        card_view:layout_constraintBottom_toTopOf="@id/guidelinehRow1Bottom"
        android:layout_marginTop="8dp"
        card_view:layout_constraintLeft_toRightOf="@id/guidelinev50"
        card_view:layout_constraintRight_toLeftOf="@id/guidelinev95"
        card_view:layout_constraintBaseline_toBaselineOf="@id/category"
        android:layout_marginStart="@dimen/card_text_margin_start"
        />
    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toTopOf="@id/guidelinehRow2Top"
        card_view:layout_constraintBottom_toTopOf="@id/guidelinehRow3Bottom"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/card_text_margin_start"
        card_view:layout_constraintLeft_toRightOf="@id/guidelinev5"
        card_view:layout_constraintRight_toRightOf="@id/guidelinev50"
        android:text="@string/amount_hint"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceListItem"
        />
    <TextView
        android:id="@+id/remark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:layout_constraintTop_toTopOf="@id/guidelinehRow2Top"
        card_view:layout_constraintBottom_toTopOf="@id/guidelinehRow3Bottom"
        android:layout_marginTop="8dp"
        android:layout_marginStart="@dimen/card_text_margin_start"
        card_view:layout_constraintLeft_toRightOf="@id/guidelinev50"
        card_view:layout_constraintRight_toRightOf="@id/guidelinev95"
        android:text="@string/remark_hint"
        android:layout_marginEnd="8dp"
        android:textAppearance="?attr/textAppearanceListItem"
        card_view:layout_constraintBaseline_toBaselineOf="@id/amount"
        />

</android.support.constraint.ConstraintLayout>