<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<android.support.v7.widget.Toolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        />-->
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/title_expense_details"
                android:textSize="@dimen/hm_greeting_text_size"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"

                />
            <TextView
                android:id="@+id/expense_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hm_expense_text_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorExpenseDone"
                tools:text="@string/expense_amount"
                app:layout_constraintTop_toBottomOf="@id/welcome_message"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"/>
            <Spinner
                android:id="@+id/home_trend_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                app:layout_constraintTop_toBottomOf="@id/expense_amount"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"
                android:elevation="3dp"
                />
            <TextView
                android:id="@+id/budget_left_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/hm_budget_left_text_size"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:textColor="@color/colorBudgetLeft"
                tools:text="@string/grand_total_amount"
                app:layout_constraintTop_toBottomOf="@id/home_trend_spinner"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="parent"/>

            <TextView
                android:id="@+id/grand_total_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/grand_total_message"
                android:textSize="@dimen/hm_grand_total_text_size"
                app:layout_constraintTop_toBottomOf="@id/budget_left_amount"
                app:layout_constraintLeft_toRightOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/grand_total_amount"/>

            <TextView
                android:id="@+id/grand_total_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                tools:text="@string/grand_total_amount"
                android:textSize="@dimen/hm_grand_total_text_size"
                app:layout_constraintTop_toBottomOf="@id/budget_left_amount"
                app:layout_constraintLeft_toRightOf="@id/grand_total_message"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/grand_total_message"/>

        </android.support.constraint.ConstraintLayout>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/insert_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/insert_fab_margin"
            android:tint="@android:color/white"
            app:backgroundTint="@color/colorAccent"
            android:src="@drawable/ic_add_circle_outline_black_24dp"
            />

    </android.support.design.widget.CoordinatorLayout>
</LinearLayout>